# SIFE

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md
src/: algorithms.rs  console.h  functions.c  functions.h  main.c  main.rs  utils.rs  wipe.c  wipe.h  wipe.rs
